MODON MRE BPDEV/force-app/main/default/objects/SA_Handover_Mapping__mdt/SA_Handover_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>SA Handover Mapping</label>
    <pluralLabel>SA Handover Mappings</pluralLabel>
</CustomObject>