MODON MRE BPDEV/force-app/main/default/objects/SA_Handover_Mapping__mdt/fields/App_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Step_Name__c</fullName>
    <label>App Step Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>