MODON MRE BPDEV/force-app/main/default/objects/SA_Handover_Mapping__mdt/fields/Current_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Name__c</fullName>
    <label>Current Step Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>