MODON MRE BPDEV/force-app/main/default/objects/SA_Handover_Mapping__mdt/fields/Previous_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Step_Name__c</fullName>
    <label>Previous Step Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>