MODON MRE BPDEV/force-app/main/default/objects/SA_Handover_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Previous_Step_Name__c</columns>
    <columns>Current_Step_Name__c</columns>
    <columns>Next_Step_Name__c</columns>
    <columns>App_Step_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_Fields</label>
</ListView>